force-app/main/default/objects/Method__c/Method__c.object-meta.xml
<CustomObject>
    <label>Brand</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>