force-app/main/default/objects/Method__c/fields/AveragePriceMethod__c.field-meta.xml
<CustomField>
    <fullName>AveragePriceMethod__c</fullName>
    <label>Average Price Brand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>