force-app/main/default/objects/Method__c/fields/inactive__c.field-meta.xml
<CustomField>
    <fullName>inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the method actually used.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>