force-app/main/default/objects/Method__c/fields/InternalId__c.field-meta.xml
<CustomField>
    <fullName>InternalId__c</fullName>
    <label>InternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>