force-app/main/default/objects/Method__c/fields/MethodCode__c.field-meta.xml
<CustomField>
    <fullName>MethodCode__c</fullName>
    <label>Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>