force-app/main/default/objects/Method__c/fields/MethodExtId__c.field-meta.xml
<CustomField>
    <fullName>MethodExtId__c</fullName>
    <description>External ID needed for import</description>
    <externalId>true</externalId>
    <label>BrandExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>