force-app/main/default/objects/Method__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Method__c</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>