force-app/main/default/objects/Method__c/fields/Schooltype__c.field-meta.xml
<CustomField>
    <fullName>Schooltype__c</fullName>
    <label>Schooltype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vmbo-bk</fullName>
            </value>
            <value>
                <fullName>vmbo-kgt</fullName>
            </value>
            <value>
                <fullName>vmbo-t</fullName>
            </value>
            <value>
                <fullName>vmbo-b</fullName>
            </value>
            <value>
                <fullName>vmbo-bkgt</fullName>
            </value>
            <value>
                <fullName>havo</fullName>
            </value>
            <value>
                <fullName>vwo</fullName>
            </value>
            <value>
                <fullName>Dummy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>