force-app/main/default/objects/Method__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <label>Stream</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Subsidiary__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy</fullName>
            </value>
            <value>
                <fullName>VMBO OB</fullName>
            </value>
            <value>
                <fullName>HV OB</fullName>
            </value>
            <value>
                <fullName>VMBO BB</fullName>
            </value>
            <value>
                <fullName>HV TF</fullName>
            </value>
            <value>
                <fullName>1F</fullName>
                <isActive>false</isActive>
                <label>1F</label>
            </value>
            <value>
                <fullName>2F</fullName>
                <isActive>false</isActive>
                <label>2F</label>
            </value>
            <value>
                <fullName>3F</fullName>
                <isActive>false</isActive>
                <label>3F</label>
            </value>
            <value>
                <fullName>havo/vwo-OB</fullName>
                <isActive>false</isActive>
                <label>havo/vwo-OB</label>
            </value>
            <value>
                <fullName>havo/vwo-TF</fullName>
                <isActive>false</isActive>
                <label>havo/vwo-TF</label>
            </value>
            <value>
                <fullName>hv ob klas 1</fullName>
                <isActive>false</isActive>
                <label>hv ob klas 1</label>
            </value>
            <value>
                <fullName>hv ob klas 2</fullName>
                <isActive>false</isActive>
                <label>hv ob klas 2</label>
            </value>
            <value>
                <fullName>vmbo ob klas 1</fullName>
                <isActive>false</isActive>
                <label>vmbo ob klas 1</label>
            </value>
            <value>
                <fullName>vmbo ob klas 2</fullName>
                <isActive>false</isActive>
                <label>vmbo ob klas 2</label>
            </value>
            <value>
                <fullName>vmbo-BB</fullName>
                <isActive>false</isActive>
                <label>vmbo-BB</label>
            </value>
            <value>
                <fullName>vmbo-OB</fullName>
                <isActive>false</isActive>
                <label>vmbo-OB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>