force-app/main/default/objects/Method__c/fields/SubjectOld__c.field-meta.xml
<CustomField>
    <fullName>SubjectOld__c</fullName>
    <label>Subject old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>