force-app/main/default/objects/Method__c/fields/TypeOfEducation__c.field-meta.xml
<CustomField>
    <fullName>TypeOfEducation__c</fullName>
    <formula>If (Segment__c = &apos;Basisonderwijs&apos;,&apos;BAO&apos;,IF(Segment__c = &apos;Voortgezet Onderwijs&apos;,&apos;VOO&apos;,IF(Segment__c =&apos;Middelbaar Beroepsonderwijs&apos;, &apos;MBO&apos;,&apos;Undefined&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Education</label>
    <type>Text</type>
</CustomField>