force-app/main/default/objects/Method__c/fields/Workfield__c.field-meta.xml
<CustomField>
    <fullName>Workfield__c</fullName>
    <label>Workfield</label>
    <length>255</length>
    <type>Text</type>
</CustomField>