force-app/main/default/objects/Method__c/listViews/All_Plantyn_Inactive.listView-meta.xml
<ListView>
    <fullName>All_Plantyn_Inactive</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>inactive__c</columns>
    <columns>Segment__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inactive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Plantyn - Inactive</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>