force-app/main/default/objects/Method__c/listViews/AllLiber.listView-meta.xml
<ListView>
    <fullName>AllLiber</fullName>
    <columns>NAME</columns>
    <columns>inactive__c</columns>
    <columns>Segment__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>Liber</value>
    </filters>
    <label>All Liber</label>
    <sharedTo>
        <group>AllUsersLiber</group>
    </sharedTo>
</ListView>