force-app/main/default/objects/Method__c/listViews/AllNoordhoff.listView-meta.xml
<ListView>
    <fullName>AllNoordhoff</fullName>
    <columns>NAME</columns>
    <columns>inactive__c</columns>
    <columns>Segment__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>Noordhoff,Noordhoff Digitaal Bedrijf,Noordhoff Learnlinq</value>
    </filters>
    <label>All Noordhoff</label>
    <sharedTo>
        <group>AllUsersNoordhoff</group>
    </sharedTo>
</ListView>