force-app/main/default/objects/Method__c/listViews/AllPlantyn.listView-meta.xml
<ListView>
    <fullName>AllPlantyn</fullName>
    <columns>NAME</columns>
    <columns>inactive__c</columns>
    <columns>Segment__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>Plantyn</value>
    </filters>
    <label>All Plantyn</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>